# posix_libPq

./: .gitignore  CMakeLists.txt  LICENSE  README.ko.md  README.md
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
cmake/: pqConfig.cmake.in
docs/: README.md  api-reference.md  connection-pool.md  custom-queries.md  entity-mapping.md  error-handling.md  getting-started.md  repository-pattern.md  spec-compliance-2026-02.md  stability-fixes-2026-02.md  transactions.md  type-system.md
docs/ko/: README.md  api-reference.md  connection-pool.md  custom-queries.md  entity-mapping.md  error-handling.md  getting-started.md  repository-pattern.md  spec-compliance-2026-02.md  stability-fixes-2026-02.md  transactions.md  type-system.md
examples/: usage_example.cpp
include/pq/: pq.hpp
include/pq/core/: Connection.hpp  ConnectionPool.hpp  PqHandle.hpp  QueryResult.hpp  Result.hpp  Transaction.hpp  Types.hpp
include/pq/orm/: Entity.hpp  Mapper.hpp  Repository.hpp  SchemaValidator.hpp
specs/001-entity-orm-mapping/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-entity-orm-mapping/checklists/: requirements.md
specs/001-entity-orm-mapping/contracts/: interfaces.md
specs/002-orm-enhancements/: spec.md
specs/002-orm-enhancements/checklists/: requirements.md
src/core/: Connection.cpp  ConnectionPool.cpp  Transaction.cpp
tests/: CMakeLists.txt
tests/integration/: test_extended_types_integration.cpp  test_repository_integration.cpp  test_schema_validator_integration.cpp
tests/perf/: test_sql_builder_perf.cpp
tests/scenario/: test_composite_pk_scenarios.cpp  test_schema_and_types_scenarios.cpp
tests/unit/: test_connection.cpp  test_entity.cpp  test_mapper.cpp  test_query_result.cpp  test_repository.cpp  test_result.cpp  test_schema_validator.cpp  test_types.cpp
